<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backGroundPrimary"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent.FlatButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/camaro_nome"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.Medium" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/camaro_revenda"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.ExtraInfo.Medium" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/famous_lorem_ipsum_min" />

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:text="VISUALIZAR"
                            android:textAppearance="@style/TextAppearance.FlatButton"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent.FlatButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/etios_nome"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.Medium" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/etios_revenda"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.ExtraInfo.Medium" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/famous_lorem_ipsum_min" />

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:text="VISUALIZAR"
                            android:textAppearance="@style/TextAppearance.FlatButton"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent.FlatButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ecosport_nome"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.Medium" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ecosport_revenda"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.ExtraInfo.Medium" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/famous_lorem_ipsum_min" />

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:text="VISUALIZAR"
                            android:textAppearance="@style/TextAppearance.FlatButton"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent.FlatButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uno_nome"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.Medium" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uno_revenda"
                            android:textAppearance="@style/TextAppearance.CardContent.Headline.ExtraInfo.Medium" />

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/famous_lorem_ipsum_min" />

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:text="VISUALIZAR"
                            android:textAppearance="@style/TextAppearance.FlatButton"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</LinearLayout>